--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.0",
     "pokemon": "^2.3.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.1"
   }
 }
